fix: remove z-index on root-layout

--- a/docs/.vuepress/theme/assets/less/dialtone-docs.less
+++ b/docs/.vuepress/theme/assets/less/dialtone-docs.less
@@ -599,7 +599,6 @@ a.header-anchor {
   }
 
   &--content {
-    z-index: var(--zi-base1);
     align-items: flex-start;
     max-width: 40%;
 
@@ -611,7 +610,6 @@ a.header-anchor {
   }
 
   &--image {
-    z-index: var(--zi-base1);
 
     @media (max-width: 640px) {
       display: none;
